fix: input wrong font family
closes #12

--- a/P4/SCSS/_base-style.scss
+++ b/P4/SCSS/_base-style.scss
@@ -80,6 +80,35 @@ a {
   cursor: pointer;
 }
 
+.icon-gray {
+  color: black;
+  display: flex;
+  align-items: center;
+}
+.icon-gray i {
+  margin: 0px 15px;
+}
+
+.fa-store {
+  color: #9356DC;
+}
+
+.fa-list-ul {
+  color: gray;
+}
+
+.fa-mobile-screen-button {
+  color: gray;
+}
+
+.icon-gray:hover {
+  color: #9356dc;
+}
+
+.icon-primary {
+  color: #9356dc;
+}
+
 .header-location {
   background-color: #eaeaea;
   color: #353535;
