--- a/P4/SCSS/_main-layout.scss
+++ b/P4/SCSS/_main-layout.scss
@@ -35,6 +35,8 @@
 
 .header-location input {
   width: 109px;
+  font-family: Roboto;
+  color: black;
 }
 
 .search {
